--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 #
+group=com.osmerion.onetrickpony
+version=1.0.0
+
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.unsafe.configuration-cache=true
