build: migrate to stable configuration cache property name

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,8 +32,8 @@ group=com.osmerion.onetrickpony
 version=1.0.0
 
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 org.gradle.parallel=true
-org.gradle.unsafe.configuration-cache=true
 org.gradle.welcome=never
 
 systemProp.file.encoding=utf-8
