--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,8 @@ jobs:
     if: ${{ always() }}
     needs: check
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
     steps:
       - name: Cleanup
         uses: GeekyEggo/delete-artifact@65041433121f7239077fa20be14c0690f70569de
