--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -175,6 +175,8 @@ jobs:
     if: ${{ always() }}
     needs: nexus-release
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
     steps:
       - name: Cleanup
         uses: GeekyEggo/delete-artifact@65041433121f7239077fa20be14c0690f70569de
