chore: update Dependabot configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,5 +14,7 @@ updates:
     groups:
       "@actions/artifacts":
         patterns:
+          - "actions/deploy-pages"
           - "actions/download-artifact"
           - "actions/upload-artifact"
+          - "actions/upload-pages-artifact"
