chore: update copyright

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023 Leon Linhart,
+# Copyright (c) 2023-2024 Leon Linhart,
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
