--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
     name: Check
     strategy:
       matrix:
-        jdk: [ 11, 17, 19 ]
+        jdk: [ 11, 17, 21, 22 ]
     needs: build
     runs-on: ubuntu-latest
     steps:
